add titles to pages

--- a/app/Resources/views/default/help.html.twig
+++ b/app/Resources/views/default/help.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Help{% endblock %}
+
 {% block body %}
 
 <h2 class="text-center">Jailbreaking Help and Support</h2>
