update templates to point to ipsw.me

--- a/templates/layouts/base.tmpl
+++ b/templates/layouts/base.tmpl
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <title>Can I Jailbreak? - {{ template "title" . }}</title>
-    <link rel="stylesheet" type="text/css" href="https://www.icj.me/assets/css/ipsw.me.theme.css">
+    <link rel="stylesheet" type="text/css" href="https://ipsw.me/assets/css/app.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://ipsw.me/assets/images/favicon.ico">
 
@@ -27,11 +26,11 @@
     <div class="top">
         <div class="col-md-6 col-md-offset-2">
             <div class="col-sm-4 hidden-xs">
-                <a href="https://www.icj.me/"><img src="https://www.icj.me/assets/images/penguin.png" style="width: 100px; height: 100px;" alt="Just a Penguin"></a>
+                <a href="https://ipsw.me/"><img src="https://ipsw.me/assets/images/brand/penguin.png" style="width: 100px; height: 100px;" alt="Just a Penguin"></a>
             </div>
             <div class="col-xs-12 col-sm-8 text-center">
                 <h1>Can I Jailbreak?</h1>
-                <p style="color: grey"><small>by <a href="https://www.icj.me/">Just a Penguin</a></small></p>
+                <p style="color: grey"><small>by <a href="https://ipsw.me/">IPSW Downloads</a></small></p>
             </div>
         </div>
 
