remove jailbrea.kr link
(I don't link to competitors ;))

--- a/templates/layouts/base.tmpl
+++ b/templates/layouts/base.tmpl
@@ -51,7 +51,7 @@
             <a href="/">canijailbreak.com</a>
             is <a href="https://github.com/cj123/canijailbreak.com">open source on GitHub</a>.
 
-            thanks to chpwn for the <a href="http://jailbrea.kr">inspiration</a>.
+            thanks to chpwn for the inspiration.
             previous information (and more) gathered from
             <a href="https://www.theiphonewiki.com/wiki/Jailbreak">The iPhone Wiki</a>.<br>
         </p>
