--- a/templates/layouts/base.tmpl
+++ b/templates/layouts/base.tmpl
@@ -51,21 +51,21 @@
             <a href="/">canijailbreak.com</a>
             is <a href="https://github.com/cj123/canijailbreak.com">open source on GitHub</a>.
 
-            thanks to chpwn for the inspiration.
-            previous information (and more) gathered from
+            Thanks to chpwn for the inspiration.
+            Previous information (and more) gathered from
             <a href="https://www.theiphonewiki.com/wiki/Jailbreak">The iPhone Wiki</a>.<br>
         </p>
 
         <p>
-            if you want to use this information in your project,
-            <a href="/jailbreaks.json">check out our API <i class="fa fa-code"></i></a>
+            If you want to use this information in your project,
+            <a href="/jailbreaks.json">check out our "API" <i class="fa fa-code"></i></a>
         </p>
 
         <a href="https://ipsw.me/" class="btn btn-info">IPSW Downloads can be found here</a>
 
         <div class="text-center">
             <br><br>
-            <small>built on {{ .BuildDate.Format "Jan 02, 2006 15:04:05 UTC" }}</small>
+            <small>Built on {{ .BuildDate.Format "Jan 02, 2006 15:04:05 UTC" }}</small>
         </div>
     </div>
 </div>
