Avoided the ugly "fullstop after frown" thing

--- a/templates/pages/index.tmpl
+++ b/templates/pages/index.tmpl
@@ -28,7 +28,7 @@
 
         {{ else }}
             <div class="text-danger">
-                <i class="fa fa-times"></i> No jailbreak yet <i class="fa fa-frown-o"></i>.
+                <i class="fa fa-times"></i> No jailbreak yet <i class="fa fa-frown-o"></i><br>
                 Check back later!
             </div>
 
@@ -91,7 +91,7 @@
                     {{ end }}
                 {{ else }}
                     <p class="text-danger">
-                        <i class="fa fa-times"></i> No jailbreak yet :(. Check back later!<br>
+                        <i class="fa fa-times"></i> No jailbreak yet :(<br>Check back later!
                     </p>
                 {{ end }}
             </div>
