--- a/templates/layouts/base.tmpl
+++ b/templates/layouts/base.tmpl
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find out whether you can jailbreak your iOS device.">
     <meta name="keywords" content="jailbreak, ios, jailbreak ios, iphone, ipad, redsn0w, taig, p0sixspwn, apple">
+    <meta charset="UTF-8">
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
