add a link to file an issue

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -59,7 +59,9 @@
 
         <p>
             if you want to use this information in your project,
-            <a href="/jailbreaks.json">check out our API <i class="fa fa-code"></i></a>
+            <a href="/jailbreaks.json">check out our API <i class="fa fa-code"></i></a>.
+            
+            if you disagree with the jailbreaks listed on this website, please <a href="https://github.com/cj123/canijailbreak.com/issues">open an issue</a>.
         </p>
 
         <a href="https://ipsw.me/" class="btn btn-info">IPSW Downloads can be found here</a>
